# otter-motion-format

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml
otter_motion_format/: __init__.py  gmr_conversion.py  main.py  otter_motion_format.py  viewer.py
